[package]
name = "lean-neptune-bindings"
version = "0.1.0"
edition = "2018"
authors = [
    "Anders C. Sørby <anders@yatima.io>",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["staticlib"]

[features]
std = []

[build-dependencies]
cbindgen = "0.20.0"

[dependencies]
neptune = "5.1.0"
ff = "0.11.0"
generic-array = "0.14.4"
blstrs = "0.4.0"
